frontend updates, toggled always on scrollbar, size fix

--- a/src/index.css
+++ b/src/index.css
@@ -83,12 +83,12 @@ body {
 .sidebar {
   width: 360px;
   background-color: #30343F;
-  border: 2px solid #434C5E;
+  border: 1px solid #686E7C;
   border-radius: 16px;
   display: flex;
   flex-direction: column;
-  padding: 1rem;
-  padding-left: 1.8rem;
+  padding: 0.5rem;
+  padding-left: 1rem;
   margin: 1rem;
   overflow-y: auto;
   font-weight: 200;
@@ -111,7 +111,7 @@ body {
 
 .categories-list {
   flex-grow: 1;
-  overflow-y: auto;
+  overflow-y: scroll;
 }
 
 .category {
@@ -298,21 +298,17 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 8px;
+  width: 3px;
 }
 
 ::-webkit-scrollbar-track {
   background: #3B4252;
-  border-radius: 4px;
+  border-radius: 3px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #4C566A;
-  border-radius: 4px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: #616E88;
+  background: #9299A8;
+  border-radius: 3px;
 }
 
 /* Responsive adjustments */
